fix truncation so verified icon is always shown on ViewGroup and on ViewProfile

--- a/scss/dialogs/_group-styles.scss
+++ b/scss/dialogs/_group-styles.scss
@@ -11,6 +11,14 @@ input.group-name-input {
   user-select: text;
 }
 
+p.group-name {
+  display: flex;
+  p.trucated-name {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
 input.group-name-input {
   border-bottom: solid;
   border-color: var(--loginInputFocusColor);
